--- a/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/PartsCreateViewTemplate.tt
+++ b/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/PartsCreateViewTemplate.tt
@@ -26,7 +26,14 @@
 <# } #>
 		</fieldset>
 <# } #>
-		<input type="submit" value="@T("Submit")" />
+		<div id="page-actions" class="clearfix">
+			<div btn-actions>
+				<button type="button" class="btn btn-small" onclick="history.back()">Back</button>
+				<button type="submit" class="btn btn-small btn-primary" >Save</button>
+				<button type="submit" class="btn btn-small btn-primary" onclick="history.back()">Save & Back</button>
+			</div>
+		</div>
+
 	}
 </div>
 
