--- a/src/Coevery.Web/Themes/Mooncake/Views/Menu.cshtml
+++ b/src/Coevery.Web/Themes/Mooncake/Views/Menu.cshtml
@@ -1,7 +1,7 @@
-﻿@{
+﻿@using Coevery.UI.Navigation
+@{
     var menus = Model.ItemList;
 }
-@using Coevery.UI.Navigation
 
 <nav id="navigation" class="no-perspective">
     @if (menus.Count > 0) {
