--- a/src/Coevery.Web/Themes/Mooncake/Views/MenuItem.cshtml
+++ b/src/Coevery.Web/Themes/Mooncake/Views/MenuItem.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using Coevery.UI.Navigation
+@{
     MenuItem menu = Model.Item;
     int level = Model.Level;
     bool hasChildren = menu.Items.Any();
@@ -6,7 +7,6 @@
     string levelClass = "menu-level-" + level;
     string menuText = menu.Text.Text;
 }
-@using Coevery.UI.Navigation
 
 <li @if (menu.Selected && !hasChildren) {<text>class="active"</text>}>
     <span>
