--- a/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/IndexViewTemplate.tt
+++ b/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/IndexViewTemplate.tt
@@ -1,19 +1,18 @@
 ﻿<#@ template debug="false" hostspecific="false" language="C#" #>
 <#@ output extension=".txt" #>
-
-
-@if (Model.Header != null) {
-    @Display(Model.Header)
+@{
+    string displayName = Model.ContentItem.TypeDefinition.DisplayName;
 }
+<header id="page-title" class="ng-scope">
+    <h1 class="pull-left">@displayName</h1>
+</header>
 <section id="main-content">
     <div id="page-actions" class="clearfix">
-        @if (Model.Actions != null) {
-            @Display(Model.Actions)
-        }
-        <div class="btn-toolbar pull-right">
-            @if (Model.Sidebar != null) {
-                @Display(Model.Sidebar)
-            }
+        <div class="btn-toolbar pull-left">
+            <button id="btnAdd" class="btn btn-small btn-success" type="button"><i class="icon-plus"></i>Add</button>
+            <button id="btnEdit" class="btn btn-small btn-primary hide" type="button"><i class="icon-edit"></i>Edit</button>
+            <button id="btnDelete" class="btn btn-small btn-warning hide" type="button"><i class="icon-trash"></i>Delete</button>
+            <button id="btnRefresh" class="btn btn-small" type="button"><i class="icon-refresh"></i>Refresh</button>
         </div>
     </div>
     @Display(Model.Content)
