Move angular into theme

--- a/src/Coevery.Web/Themes/MooncakeBase/Views/BaseResource.cshtml
+++ b/src/Coevery.Web/Themes/MooncakeBase/Views/BaseResource.cshtml
@@ -36,7 +36,7 @@
     /*jqGrid css files
    ------------------------------*/
     Style.Require("jqGrid");
-    Style.Require("jqGridCustom");
+    Style.Include("grid.css");
     Style.Include("jquery.tabledrag.css");
 
     Style.Require("Bootstrap_Datetimepicker");
