--- a/src/Coevery.Web/Themes/MooncakeAdmin/Views/MooncakeResource.cshtml
+++ b/src/Coevery.Web/Themes/MooncakeAdmin/Views/MooncakeResource.cshtml
@@ -6,6 +6,8 @@
 
     Script.Include("js/setup-systemadmin.js");
 
+    Script.Require("require");    
+
     Script.Include("angular/angular.js", "angular/angular.min.js");
     Script.Include("angular/i18n/angular-locale." + WorkContext.CurrentCulture + ".js");
     Script.Include("angular/angular-resource.js", "angular/angular-resource.min.js");
