--- a/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/CreateViewTemplate.tt
+++ b/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/CreateViewTemplate.tt
@@ -1,13 +1,9 @@
 ﻿@{
-    string displayName = Model.ContentItem.TypeDefinition.DisplayName;
-    string description = string.Format(T("create a new {0}").Text, displayName);
+	string displayName = Model.ContentItem.TypeDefinition.DisplayName;
+    Layout.Title = displayName;
+    Layout.TitleDescription = string.Format(T("create a new {0}").Text, displayName);
 }
-<header id="page-title" class="ng-scope">
-    <h1 class="pull-left">@displayName <span>@description</span></h1>
-</header>
-<section id="main-content">
-    @if (Model.Actions != null) {
-        @Display(Model.Actions)
-    }
-    @Display(Model.Content)
-</section>
+@if (Model.Actions != null) {
+    @Display(Model.Actions)
+}
+@Display(Model.Content)
