--- a/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/IndexViewTemplate.tt
+++ b/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/IndexViewTemplate.tt
@@ -1,22 +1,15 @@
-﻿<#@ template debug="false" hostspecific="false" language="C#" #>
-<#@ output extension=".txt" #>
-@{
-    string displayName = Model.ContentItem.TypeDefinition.DisplayName;
+﻿@{
+    Layout.Title = Model.ContentItem.TypeDefinition.DisplayName;
 }
-<header id="page-title" class="ng-scope">
-    <h1 class="pull-left">@displayName</h1>
-</header>
-<section id="main-content">
-    <div id="page-actions" class="clearfix">
-        <div class="btn-toolbar pull-left">
-            <button id="btnAdd" class="btn btn-small btn-success" type="button"><i class="icon-plus"></i>Add</button>
-            <button id="btnEdit" class="btn btn-small btn-primary hide" type="button"><i class="icon-edit"></i>Edit</button>
-            <button id="btnDelete" class="btn btn-small btn-warning hide" type="button"><i class="icon-trash"></i>Delete</button>
-            <button id="btnRefresh" class="btn btn-small" type="button"><i class="icon-refresh"></i>Refresh</button>
-        </div>
+<div id="page-actions" class="clearfix">
+    <div class="btn-toolbar pull-left">
+        <button id="btnAdd" class="btn btn-small btn-success" type="button"><i class="icon-plus"></i>&nbsp;Add</button>
+        <button id="btnEdit" class="btn btn-small btn-primary hide" type="button"><i class="icon-edit"></i>&nbsp;Edit</button>
+        <button id="btnDelete" class="btn btn-small btn-warning hide" type="button"><i class="icon-trash"></i>&nbsp;Delete</button>
+        <button id="btnRefresh" class="btn btn-small" type="button"><i class="icon-refresh"></i>&nbsp;Refresh</button>
     </div>
-    @Display(Model.Content)
-</section>
+</div>
+@Display(Model.Content)
 
 @if (Model.Footer != null) {
     <footer>
