--- a/src/Coevery.Web/Themes/Mooncake/Styles/site.css
+++ b/src/Coevery.Web/Themes/Mooncake/Styles/site.css
@@ -318,3 +318,28 @@ div.control textarea {
     line-height: 1em;
     height: auto;
 }
+
+/*Messages*/
+#messages .message {
+    margin: 15px 0 5px 0;
+    padding: 4px;
+    clear: both;
+}
+
+.message-Information {
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+    color: #3c763d;
+}
+
+.message-Warning {
+    background-color: #fcf8e3;
+    border: 1px solid #faebcc;
+    color: #8a6d3b;
+}
+
+.message-Error {
+    background-color: #f2dede;
+    border-color: #ebccd1;
+    color: #a94442;
+}
