--- a/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/CreateView.tt
+++ b/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/CreateView.tt
@@ -1,4 +1,5 @@
-﻿@{
+﻿<#@ template debug="false" hostspecific="true" language="C#" #>
+@{
     string displayName = Model.ContentItem.TypeDefinition.DisplayName;
     string description = string.Format(T("create a new {0}").Text, displayName);
 }
