--- a/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/IndexView.tt
+++ b/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/IndexView.tt
@@ -1,4 +1,4 @@
-﻿<#@ template debug="false" hostspecific="false" language="C#" #>
+﻿<#@ template debug="false" hostspecific="true" language="C#" #>
 <#@ output extension=".txt" #>
 @{
     string displayName = Model.ContentItem.TypeDefinition.DisplayName;
