--- a/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/ModuleCsProj.tt
+++ b/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/ModuleCsProj.tt
@@ -1,4 +1,4 @@
-﻿<#@ template debug="false" language="C#" #>
+﻿<#@ template="" debug="false" hostspecific="true" language="C#" #>
 <#@ output extension=".txt" #>
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
