--- a/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/PartsDetailView.tt
+++ b/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/PartsDetailView.tt
@@ -1,4 +1,7 @@
-﻿<#@ template debug="false" language="C#" #>
+﻿<#@ template debug="false" hostspecific="true" language="C#" #>
+<#@ assembly name="Coevery.DeveloperTools" #>
+<#@ assembly name="System.Core" #>
+<#@ assembly name="Coevery.Core" #>
 <#@ parameter type="System.Collections.Generic.IList<Coevery.DeveloperTools.FormDesigner.Models.Section>" name="SectionList" #>
 <#@ import namespace="Coevery.Core.Common.Extensions" #>
 <#@ import namespace="System.Linq" #>
