--- a/src/Coevery.Web/Core/OptionSet/Views/DisplayTemplates/OptionSet.cshtml
+++ b/src/Coevery.Web/Core/OptionSet/Views/DisplayTemplates/OptionSet.cshtml
@@ -2,7 +2,7 @@
     <div class="controls">
         <label class="radio">
             <input type="radio" ng-model="fieldType" value="OptionSetField">
-            Selection
+            Option Set
             <span class="help-inline">Allows users to select a value from a predefined list.</span>
         </label>
     </div>
